# dj5-starter

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  act.ps1  docker-compose.yml  generate_dot_env.py  generate_dotenv.py  install-dj5-starter.ps1  manage.py  pyproject.toml  requirements.in  requirements.txt  transform_in_dot_env.txt
.github/workflows/: django.yml
pages/: admin.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py
portfolio/: admin.py  apps.py  choices.py  models.py  translation.py  urls.py  views.py
portfolio/fixtures/: carousels.json  filer.json  initial.json  portfolio.json  projects.json  users.json
portfolio/migrations/: 0001_initial.py
portfolio/tests/: test_models.py  test_views.py
project/: processors.py  settings.py  tests.py  urls.py  views.py  wsgi.py
project/settings/: base.py  test.py
project/templates/: 403.html  404.html  base.html  base_menu.html  base_old.html  footer.html  home.html  messages.html  navbar.html  navbar_new.html  navbar_old.html  search_results.html
users/: admin.py  forms.py  models.py  translation.py  views.py
users/migrations/: 0001_squashed_0005_rename_bio_de_profile_bio_en_remove_profile_fb_image_and_more.py  0004_rename_bio_en_profile_bio_de.py  0005_rename_bio_de_profile_bio_en_remove_profile_fb_image_and_more.py  0006_logo.py  0007_footerlink.py  0008_alter_profile_avatar.py  0009_profile_image.py  0009_rename_bio_en_profile_bio_de.py  0010_alter_profile_avatar.py  0011_merge_20240528_2144.py
users/templatetags/: neapolitan_htmx.py
users/tests/: test_models.py  (+1 more)
(+96 files in other folders)
